--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -2,6 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .defaultBtn {
+    font-size:theme(fontSize.base);
+    font-weight: theme(fontWeight.light);
+    letter-spacing: theme(letterSpacing.wider);
+    text-transform: uppercase;
+    padding: theme("padding[2]") theme("padding.10");
+    color: theme("textColor.white");
+    border-color: theme("borderColor.white");
+    border-width: theme("borderWidth.2");
+    border-radius: theme('borderRadius.3xl');
+    transition: all theme(transitionDelay.300) theme(transitionTimingFunction.DEFAULT);
+  }
+  .defaultBtn:hover {
+    color: theme(textColor.white);
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+
+  @media screen and (max-width: 768px) {
+    .defaultBtn {
+      font-size:theme(fontSize.xs);
+      padding: theme("padding[1.5]") theme("padding.6");
+    }
+  }
+}
+
 body {
 }
 .pageContent {
