--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -34,9 +34,9 @@
 
   *[class^="styledImage"] {
     cursor: pointer;
-    transition: theme(transitionProperty.all) theme(transitionDuration.300) theme(transitionTimingFunction.linear);
+    transition: theme(transitionProperty.all) theme(transitionDuration.300) theme(transitionTimingFunction.linear) theme(transitionDelay.700);
   }
-  *:hover > *[class^="styledImage"] {
+  .styledImage-inView {
     transform: translate(-15px, -15px);
     box-shadow: 15px 15px 4px 0px rgba(0, 0, 0, 0.4);
   }
